<resources>
    <string name="app_name">LEADERBORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="other_text"> %1$d learning hours, %2$s. </string>
    <string name="error_occured">Some error occurred</string>
    <string name="skill_iq_score">%1$d skill IQ Score, %2$s.</string>
    <string name="projet_submission">Projet Submission</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="interrogation_tag">\?</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
</resources>